# F-Cell

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
AO_Temporal_Analysis/Processing_Pipeline/: image_A_m1.tif  image_Avg_m1.tif  image_B_Trans_m1.tif
ORG_Calculation/Utility/: load_reg_MEAO_data.m
config_files/: Cooper_2017_Morgan_analysis.json  Cooper_2017_meao_analysis.json  MCW_AO2_1p0.json  align_im_to_refmode.json  institut_dela_vision.json  mcgregor.json  meao.json  meao4CL.json  meao_animal (1).json  meao_animal.json  meao_before_2024.json  meao_before_2024_MG.json  meao_conf.json  norm_database_meao.json  norm_database_meao_b4_2024.json  norm_database_meao_b4_2024_stddev.json  norm_database_meao_stddev.json  quick_start_template.json  retitrack.json  sorbonne_uni.json  uw.json
config_files/parameter_permutations/: config_norm-mean_radius-1_std-linear_stddev_stdstart--0.5_summ-rms.json  config_norm-mean_radius-1_std-linear_stddev_stdstart--0.5_summ-stddev.json  config_norm-mean_radius-1_std-linear_stddev_stdstart--0.5_summ-variance.json  config_norm-mean_radius-1_std-linear_stddev_stdstart--1_summ-rms.json  config_norm-mean_radius-1_std-linear_stddev_stdstart--1_summ-stddev.json  config_norm-mean_radius-1_std-linear_stddev_stdstart--1_summ-variance.json  config_norm-mean_radius-1_std-linear_stddev_stdstart--2_summ-rms.json  config_norm-mean_radius-1_std-linear_stddev_stdstart--2_summ-stddev.json  config_norm-mean_radius-1_std-linear_stddev_stdstart--2_summ-variance.json  (+397 more)
pyORG_Calculation/: requirements.txt
src/: generate_exes.py
(+116 files in other folders)
